prevent horizontal scroll

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -14,6 +14,7 @@ body {
     background-position: top center;
     background-attachment: fixed;
     background-size: cover;
+    overflow-x: hidden;
     color: #AAA;
 } 
 body.media{
